--- a/src/app/demo/components/prize/prize-list/prize-list.component.html
+++ b/src/app/demo/components/prize/prize-list/prize-list.component.html
@@ -13,7 +13,7 @@
         responsiveLayout="scroll">
       <ng-template pTemplate="caption">
         <div class="flex justify-content-between flex-column sm:flex-row">
-          <button pButton label="Clear" class="p-button-outlined mb-2" icon="pi pi-filter-slash" (click)="clear(dt1)"></button>
+<button pButton label="Refresh" class="p-button-outlined mb-2" icon="pi pi-refresh" (click)="refreshPrizes()"></button>
           <span class="p-input-icon-left mb-2">
             <i class="pi pi-search"></i>
             <input pInputText type="text" #filter (input)="onGlobalFilter(dt1, $event)" placeholder="Search Keyword" class="w-full"/>
