--- a/src/app/demo/components/prize/sponsor-prizes/sponsor-prizes.component.html
+++ b/src/app/demo/components/prize/sponsor-prizes/sponsor-prizes.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <!-- src/app/components/sponsor-prizes/sponsor-prizes.component.html -->
 <div class="sponsor-prizes-container">
   <div class="sponsor-header" *ngIf="sponsorInfo">
@@ -75,3 +76,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
