--- a/src/app/demo/components/sponsor/sponsor-leaderboard/sponsor-leaderboard.component.html
+++ b/src/app/demo/components/sponsor/sponsor-leaderboard/sponsor-leaderboard.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <!-- src/app/components/sponsor-leaderboard/sponsor-leaderboard.component.html -->
 <div class="main">
     <div id="header">
@@ -50,3 +51,4 @@
       </table>
     </div>
   </div>
+  <app-footer></app-footer>
